[package]
name = "bundle-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = "0.4.22"
cnsl = "0.1.3"
fern = "0.6.1"
log = "0.4.17"
rpassword = "7.1.0"
rust-s3 = { version = "0.32.3" }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
toml = "0.5.9"
